# config-mixin

./: README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tox.yml
config_mixin/: __init__.py
tests/: test_config_mixin.py
