[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "config_mixin"
dynamic = ["version"]
description = "Provide an auto-discovery process for configurations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "License :: OSI Approved :: Apache Software License"}
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "munch",
    "PyYAML"
]
authors = [
    {name = "Stephane Robert", email = "stephane.robert@gmail.com"},
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pyhamcrest"]

[project.urls]
"Homepage" = "https://github.com/stephanerobert/config-mixin"

[tool.setuptools.dynamic]
version = {attr = "config_mixin.__version__"}
